//
// Protocol buffers definition for the Authentication Service.
//

syntax = "proto3";
package hmsProto;

// Enums

enum GENDER {
    MASCULINE = 0;
    FEMININE = 1;
}

enum VEHICLE_TYPE {
    SHORT_DISTANCE = 0;
    LONG_DISTANCE = 1;
}

enum SHIFT_TYPE {
    SHIFT_MORNING = 0;
    SHIFT_AFTERNOON = 1;
    SHIFT_NIGHT = 2;
}

enum ROUTE_CHARACTERISTIC {
    HIGH_TRAFFIC = 0;
    LOW_TRAFFIC = 1;
    CRIMINAL_AREA = 2;
    THIN_ROADS = 3;
}

// Types

message Vehicle {
    int32 id = 1;
    VEHICLE_TYPE type = 2;
}

message Interval {
    int32 min = 1;
    int32 max = 2;
}

message Profile {
    int32 id = 1;
    Interval ageRange = 2;
    GENDER gender = 3;
    Interval shiftHoursRange = 4;
    SHIFT_TYPE shiftType = 5;
    repeated int32 routeIds = 6;
}

message Route {
    int32 id = 1;
    repeated Vehicle vehicles = 2;
    repeated ROUTE_CHARACTERISTIC characteristics = 3;
}

message UserData {
    string name = 1;
    string username = 2;
    int32 age = 3;
    GENDER gender = 4;
    Profile profile = 5;
    repeated Route routes = 6;
}

// Requests/Responses

message UserDataRequest {
    string username = 1;
}

message UserDataResponse {
    UserData userData = 1;
}